--- a/article/references.bib
+++ b/article/references.bib
@@ -388,13 +388,6 @@
   isbn      = {978-3-031-10422-0}
 }
 
-@report{kincaid1975derivation,
-  title     = {Derivation of new readability formulas (automated readability index, fog count and flesch reading ease formula) for navy enlisted personnel},
-  author    = {Kincaid, J Peter and Fishburne Jr, Robert P and Rogers, Richard L and Chissom, Brad S},
-  year      = {1975},
-  publisher = {Institute for Simulation and Training, University of Central Florida}
-}
-
 @inproceedings{yelp2015neurips,
   author    = {Zhang, Xiang and Zhao, Junbo and LeCun, Yann},
   booktitle = {Advances in Neural Information Processing Systems},
@@ -432,94 +425,157 @@
   booktitle = {NIPS}
 }
 
-@misc{hanna2024,
-  title  = {HANNA Benchmark Repository},
-  author = {Cyril Chhun and Fabian Suchanek and Chloé Clavel},
-  url    = {https://github.com/dig-team/hanna-benchmark-asg},
-  note   = {accessed 2024-06-01}
-}
-
 @inproceedings{lhoest-etal-2021-datasets,
-    title = "Datasets: A Community Library for Natural Language Processing",
-    author = "Lhoest, Quentin  and
-      Villanova del Moral, Albert  and
-      Jernite, Yacine  and
-      Thakur, Abhishek  and
-      von Platen, Patrick  and
-      Patil, Suraj  and
-      Chaumond, Julien  and
-      Drame, Mariama  and
-      Plu, Julien  and
-      Tunstall, Lewis  and
-      Davison, Joe  and
-      {\v{S}}a{\v{s}}ko, Mario  and
-      Chhablani, Gunjan  and
-      Malik, Bhavitvya  and
-      Brandeis, Simon  and
-      Le Scao, Teven  and
-      Sanh, Victor  and
-      Xu, Canwen  and
-      Patry, Nicolas  and
-      McMillan-Major, Angelina  and
-      Schmid, Philipp  and
-      Gugger, Sylvain  and
-      Delangue, Cl{\'e}ment  and
-      Matussi{\`e}re, Th{\'e}o  and
-      Debut, Lysandre  and
-      Bekman, Stas  and
-      Cistac, Pierric  and
-      Goehringer, Thibault  and
-      Mustar, Victor  and
-      Lagunas, Fran{\c{c}}ois  and
-      Rush, Alexander  and
-      Wolf, Thomas",
-    booktitle = "Proceedings of the 2021 Conference on Empirical Methods in Natural Language Processing: System Demonstrations",
-    month = nov,
-    year = "2021",
-    address = "Online and Punta Cana, Dominican Republic",
-    publisher = "Association for Computational Linguistics",
-    url = "https://aclanthology.org/2021.emnlp-demo.21",
-    pages = "175--184",
-    abstract = "The scale, variety, and quantity of publicly-available NLP datasets has grown rapidly as researchers propose new tasks, larger models, and novel benchmarks. Datasets is a community library for contemporary NLP designed to support this ecosystem. Datasets aims to standardize end-user interfaces, versioning, and documentation, while providing a lightweight front-end that behaves similarly for small datasets as for internet-scale corpora. The design of the library incorporates a distributed, community-driven approach to adding datasets and documenting usage. After a year of development, the library now includes more than 650 unique datasets, has more than 250 contributors, and has helped support a variety of novel cross-dataset research projects and shared tasks. The library is available at https://github.com/huggingface/datasets.",
-    eprint={2109.02846},
-    archivePrefix={arXiv},
-    primaryClass={cs.CL},
+  title         = {Datasets: A Community Library for Natural Language Processing},
+  author        = {Lhoest, Quentin  and
+                   Villanova del Moral, Albert  and
+                   Jernite, Yacine  and
+                   Thakur, Abhishek  and
+                   von Platen, Patrick  and
+                   Patil, Suraj  and
+                   Chaumond, Julien  and
+                   Drame, Mariama  and
+                   Plu, Julien  and
+                   Tunstall, Lewis  and
+                   Davison, Joe  and
+                   {\v{S}}a{\v{s}}ko, Mario  and
+                   Chhablani, Gunjan  and
+                   Malik, Bhavitvya  and
+                   Brandeis, Simon  and
+                   Le Scao, Teven  and
+                   Sanh, Victor  and
+                   Xu, Canwen  and
+                   Patry, Nicolas  and
+                   McMillan-Major, Angelina  and
+                   Schmid, Philipp  and
+                   Gugger, Sylvain  and
+                   Delangue, Cl{\'e}ment  and
+                   Matussi{\`e}re, Th{\'e}o  and
+                   Debut, Lysandre  and
+                   Bekman, Stas  and
+                   Cistac, Pierric  and
+                   Goehringer, Thibault  and
+                   Mustar, Victor  and
+                   Lagunas, Fran{\c{c}}ois  and
+                   Rush, Alexander  and
+                   Wolf, Thomas},
+  booktitle     = {Proceedings of the 2021 Conference on Empirical Methods in Natural Language Processing: System Demonstrations},
+  month         = nov,
+  year          = {2021},
+  address       = {Online and Punta Cana, Dominican Republic},
+  publisher     = {Association for Computational Linguistics},
+  url           = {https://aclanthology.org/2021.emnlp-demo.21},
+  pages         = {175--184},
+  abstract      = {The scale, variety, and quantity of publicly-available NLP datasets has grown rapidly as researchers propose new tasks, larger models, and novel benchmarks. Datasets is a community library for contemporary NLP designed to support this ecosystem. Datasets aims to standardize end-user interfaces, versioning, and documentation, while providing a lightweight front-end that behaves similarly for small datasets as for internet-scale corpora. The design of the library incorporates a distributed, community-driven approach to adding datasets and documenting usage. After a year of development, the library now includes more than 650 unique datasets, has more than 250 contributors, and has helped support a variety of novel cross-dataset research projects and shared tasks. The library is available at https://github.com/huggingface/datasets.},
+  eprint        = {2109.02846},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.CL}
 }
 
 @book{sterne2003life,
-  title={The Life and Opinions of Tristram Shandy, Gentleman},
-  author={Sterne, L. and New, J. and New, M. and Ricks, C.},
-  isbn={9780141920146},
-  series={Penguin classics},
-  url={https://books.google.ro/books?id=GGHGkzdohUgC},
-  year={2003},
-  publisher={Penguin Books Limited}
+  title     = {The Life and Opinions of Tristram Shandy, Gentleman},
+  author    = {Sterne, L. and New, J. and New, M. and Ricks, C.},
+  isbn      = {9780141920146},
+  series    = {Penguin classics},
+  url       = {https://books.google.ro/books?id=GGHGkzdohUgC},
+  year      = {2003},
+  publisher = {Penguin Books Limited}
 }
 
 @book{wilde1909poems,
-  title={Poems: With the Ballad of Reading Gaol},
-  author={Wilde, O.},
-  url={https://books.google.ro/books?id=ahaDygAACAAJ},
-  year={1909},
-  publisher={Methuen \& Company}
+  title     = {Poems: With the Ballad of Reading Gaol},
+  author    = {Wilde, O.},
+  url       = {https://books.google.ro/books?id=ahaDygAACAAJ},
+  year      = {1909},
+  publisher = {Methuen \& Company}
 }
 
 @article{kolmogorov1933,
-  title={Sulla determinazione empirica di una legge didistribuzione},
-  author={An, Kolmogorov},
-  journal={Giorn Dell'inst Ital Degli Att},
-  volume={4},
-  pages={89--91},
-  year={1933}
+  title   = {Sulla determinazione empirica di una legge didistribuzione},
+  author  = {An, Kolmogorov},
+  journal = {Giorn Dell'inst Ital Degli Att},
+  volume  = {4},
+  pages   = {89--91},
+  year    = {1933}
 }
 
 @article{smirnov1939,
-  title={On the estimation of the discrepancy between empirical curves of distribution for two independent samples},
-  author={Smirnov, Nikolai V},
-  journal={Bull. Math. Univ. Moscou},
-  volume={2},
-  number={2},
-  pages={3--14},
-  year={1939}
+  title   = {On the estimation of the discrepancy between empirical curves of distribution for two independent samples},
+  author  = {Smirnov, Nikolai V},
+  journal = {Bull. Math. Univ. Moscou},
+  volume  = {2},
+  number  = {2},
+  pages   = {3--14},
+  year    = {1939}
 }
 
+@misc{jinja2,
+  title  = {Jinja - Jinja Documentation (3.1.x)},
+  author = {The Pallets Projects},
+  year   = 2024,
+  url    = {https://jinja.palletsprojects.com/en/3.1.x/},
+  notes  = {License: BSD License; Last Accessed: 2024-06-14;}
+}
+
+@misc{gutenberg,
+  title  = {Project Gutenberg},
+  author = {Hart, Michael},
+  year   = {n.d.},
+  url    = {https://www.gutenberg.org/},
+  notes  = {Last Accessed: 2024-06-14;}
+}
+
+@article{2020SciPy-NMeth,
+  author  = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E. and
+             Haberland, Matt and Reddy, Tyler and Cournapeau, David and
+             Burovski, Evgeni and Peterson, Pearu and Weckesser, Warren and
+             Bright, Jonathan and {van der Walt}, St{\'e}fan J. and
+             Brett, Matthew and Wilson, Joshua and Millman, K. Jarrod and
+             Mayorov, Nikolay and Nelson, Andrew R. J. and Jones, Eric and
+             Kern, Robert and Larson, Eric and Carey, C J and
+             Polat, {\.I}lhan and Feng, Yu and Moore, Eric W. and
+             {VanderPlas}, Jake and Laxalde, Denis and Perktold, Josef and
+             Cimrman, Robert and Henriksen, Ian and Quintero, E. A. and
+             Harris, Charles R. and Archibald, Anne M. and
+             Ribeiro, Ant{\^o}nio H. and Pedregosa, Fabian and
+             {van Mulbregt}, Paul and {SciPy 1.0 Contributors}},
+  title   = {{{SciPy} 1.0: Fundamental Algorithms for Scientific
+             Computing in Python}},
+  journal = {Nature Methods},
+  year    = {2020},
+  volume  = {17},
+  pages   = {261--272},
+  adsurl  = {https://rdcu.be/b08Wh},
+  doi     = {10.1038/s41592-019-0686-2}
+}
+
+@article{harris2020array,
+  title     = {Array programming with {NumPy}},
+  author    = {Charles R. Harris and K. Jarrod Millman and St{\'{e}}fan J.
+               van der Walt and Ralf Gommers and Pauli Virtanen and David
+               Cournapeau and Eric Wieser and Julian Taylor and Sebastian
+               Berg and Nathaniel J. Smith and Robert Kern and Matti Picus
+               and Stephan Hoyer and Marten H. van Kerkwijk and Matthew
+               Brett and Allan Haldane and Jaime Fern{\'{a}}ndez del
+               R{\'{i}}o and Mark Wiebe and Pearu Peterson and Pierre
+               G{\'{e}}rard-Marchant and Kevin Sheppard and Tyler Reddy and
+               Warren Weckesser and Hameer Abbasi and Christoph Gohlke and
+               Travis E. Oliphant},
+  year      = {2020},
+  month     = sep,
+  journal   = {Nature},
+  volume    = {585},
+  number    = {7825},
+  pages     = {357--362},
+  doi       = {10.1038/s41586-020-2649-2},
+  publisher = {Springer Science and Business Media {LLC}},
+  url       = {https://doi.org/10.1038/s41586-020-2649-2}
+}
+
+@misc{spacy,
+  author = {Honnibal, Matthew et. al.},
+  title  = {spaCy},
+  year   = {2017},
+  url    = {https://github.com/explosion/spaCy},
+  note   = {Version: 3.7.5; Last Accessed: 2024-06-14}
+}
